--- a/src/components/custom.scss
+++ b/src/components/custom.scss
@@ -1,10 +1,41 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
-.greeting {
+.itemcount {
     width: 100%;
     height: 100%;
     padding: 18% 0% 18% 0%;
     margin: auto;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button {
+    padding:10px;
+    border:2px solid;
+    margin:10px;
+    width: 18%;
+    display: inline-flex;
+    justify-content: space-between;
+    border-radius: 1rem;
+    border-color: grey;
+    background-color: white;
+    padding: 8px;   
+}
+
+.sbutton{
+    background-color: transparent;
+    border-radius: 0%;
+    border-color: transparent;
+}
+
+.add{
+    padding:10px;
+    border:2px solid;
+    width: 18%;
+    border-radius: 1rem;
+    border-color: grey;
+    background-color: white;
+    padding: 8px;  
+    text-align: center;
 }
