--- a/src/components/custom.scss
+++ b/src/components/custom.scss
@@ -1,5 +1,9 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
+body{
+    background-color: #007194;
+}
+
 .itemcount {
     width: 100%;
     height: 100%;
@@ -18,8 +22,8 @@
     display: inline-flex;
     justify-content: space-between;
     border-radius: 1rem;
-    border-color: grey;
-    background-color: white;
+    border-color: #57B4D0;
+    background-color: #0098C7;
     padding: 8px;   
 }
 
@@ -34,8 +38,25 @@
     border:2px solid;
     width: 18%;
     border-radius: 1rem;
-    border-color: grey;
-    background-color: white;
+    border-color: #57B4D0;
+    background-color: #0098C7;
     padding: 8px;  
     text-align: center;
+}
+
+.dropdown-menu{
+    background-color: #212529;
+    border: 1px solid #57B4D0;
+}
+
+.navbar-dark .navbar-brand{
+    color: #57B4D0;
+}
+
+.nav-link{
+   color: #04A9DB;
+}
+
+.bg-dark{
+    color: #3A464A
 }
