--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -87,14 +87,19 @@ body{
     margin-bottom: 0;
 }
 
+
 .list-group-item {
     background-color: $color1;
     color: $color4;
 }
 
 .list-group {
-    width: 50%;
     margin-left: 25%;
-    margin-top: 4%;
+    margin-top: 3%;
+    width: 50%;
     text-align: center;
+}
+
+.list-container{
+    margin-top: 2%;
 }
