--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -13,11 +13,12 @@ body {
 .itemcount {
     width: 100%;
     height: 100%;
-    padding: 18% 0;
+    padding-bottom: 30px;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-end;
 }
 
 .button {
@@ -25,7 +26,7 @@ body {
     border: 3px solid;
     margin: 10px;
     min-width: 130px;
-    width: 13%;
+    width: 80%;
     display: inline-flex;
     justify-content: space-between;
     border-radius: 2rem;
@@ -55,7 +56,7 @@ body {
     padding: 10px;
     border: 3px solid;
     min-width: 130px;
-    width: 13%;
+    width: 80%;
     border-radius: 2rem;
     border-color: $color4;
     background-color: $color1;
@@ -87,19 +88,36 @@ body {
     margin-bottom: 0;
 }
 
-.list-group-item {
-    background-color: $color1;
-    color: $color4;
-    margin: 0;
+.image {
+    width: auto;
+    height: 200px;
+    margin-top: 7%;
 }
 
-.list-group {
-    margin-left: 25%;
-    margin-top: 3%;
-    width: 50%;
+.col-3{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: $color1;
+    border: 2px solid;
+    border-radius: 10px;
+    border-color: $color5;
+}
+
+.row{
+    justify-content: space-evenly;
+}
+
+.list-word{
+    color: $color4;
     text-align: center;
 }
 
-.list-container {
-    margin-top: 2%;
+.container-fluid{
+    margin-top: 4%;
+}
+
+.word-container{
+    padding: 40px;
 }
