--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -12,7 +12,7 @@ body {
 
 .itemcount {
     width: 100%;
-    height: 100%;
+    height: auto;
     padding-bottom: 30px;
     margin: auto;
     display: flex;
@@ -93,7 +93,11 @@ body {
     margin-top: 7%;
 }
 
-.col-3 {
+#col-3-n{
+    margin-left: 10%;
+}
+
+#col-3-l {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -105,6 +109,14 @@ body {
 }
 
 #col-3-d {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: $color1;
+    border: 2px solid;
+    border-radius: 10px;
+    border-color: $color5;
     margin-left: 5%;
 }
 
