--- a/src/components/scss/custom.scss
+++ b/src/components/scss/custom.scss
@@ -172,3 +172,15 @@ body {
   height: auto;
   margin: 4% 12.5%;
 }
+
+.slink {
+  text-decoration: none;
+  &:focus,
+  &:hover,
+  &:visited,
+  &:link,
+  &:active {
+    text-decoration: none;
+    color: $color4;
+  }
+}
